<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailObjectTracked">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Nom" />

    <TextView
        android:id="@+id/NomObjet2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Void"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Type" />

    <TextView
        android:id="@+id/TypeObjet2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Void"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Prix" />

    <TextView
        android:id="@+id/PrixObjet2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Void"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Descriptif" />

    <TextView
        android:id="@+id/DescriptionObjet2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Void"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/DistanceObjet" />

    <TextView
        android:id="@+id/Distance2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Void"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/PseudoVendeur" />

    <TextView
        android:id="@+id/PseudoVendeur2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Void"/>

    <Button
        android:id="@+id/But_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/But_delete"/>

</LinearLayout>