<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChooseType">

    <RadioGroup
        android:id="@+id/RadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/Bricolage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Type1"/>
        <RadioButton
            android:id="@+id/JeuxVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Type2"/>
        <RadioButton
            android:id="@+id/Musique"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Type3"/>

        <Button
            android:id="@+id/But_Validation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/But_Validation"/>
    </RadioGroup>
</LinearLayout>