<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity_Register">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Identifiant" />

    <EditText
        android:id="@+id/IdUtilisateur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/MotDePasse1" />

    <EditText
        android:id="@+id/MotDePasse1"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/MotDePasse2" />

    <EditText
        android:id="@+id/MotDePasse2"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/But_Inscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Inscription"/>

</LinearLayout>