<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListingObjets">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Distance"/>

        <TextView
            android:id="@+id/Distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </LinearLayout>


    <SeekBar
        android:id="@+id/JaugeDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="1"/>

    <ListView
        android:id="@+id/LV_Objects"
        android:layout_width="wrap_content"
        android:layout_height="198dp" />

    <Button
        android:id="@+id/But_AddObject_Form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/But_AddObject_Form"/>

    <Button
        android:id="@+id/But_ObjetASuivre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/But_ObjetASuivre_Page"/>

    <Button
        android:id="@+id/But_Deconnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/But_Deconnexion"/>

</LinearLayout>